# madrac-dubs

./: .gitignore  ARCHITECTURE.md  DUBBING_EXTENSION_AGENT_PROMPT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  PROJECT_STRUCTURE.txt  QUICKSTART.md  README.md  build_dubbing.bat  launcher.py  madrac-dubbing.qrc  madrac-dubbing.spec  pyproject.toml  requirements.txt  run_dubbing.bat  test_two_mode_architecture.py  validate_sync.py
.cache/: workspace_state.json
plugins/logs/: startup_profile.json
plugins/tts/cache/: 034c569743a9e6dc.json  07b2061870abcc9d.json  08c9c31969645681.json  0e73d1dce3951bc6.json  129013d62e5e6080.json  1f0059430bc82777.json  1f1aa83143900cbe.json  27330e77c7696b5b.json  3e210c0aad8f60fb.json  42a1c53003952e03.json  49d00dbc2fc9ae2f.json  4a3793d54b327f62.json  4bc12d0026e1032b.json  4e29e85e63aec692.json  518a5b7447c5d388.json  579c8a2048e5c66f.json  58da539be75fb435.json  59c61633f381b6e8.json  5c39685d2ecd921f.json  5c88298e45ec56d9.json  6aec0d1248ecfede.json  72366fd63cecf912.json  7d3f8a1b8432c7d8.json  815cb8f6c59ccea4.json  8228c38f1303d07e.json  82da286b1a2db677.json  84a87f61b94f266b.json  8a93f73deec9fa1a.json  968a3b76c5da0010.json  9bd0ef63e3ebeb15.json  b0f8a36c01c7be1d.json  b6863441b3735397.json  b6884e2ceead7ea8.json  bdfe300bdd816efd.json  bf0a2855250629e6.json  c1986b7c86c6ec32.json  c6269b53195e1047.json  ce56232ef3595e4c.json  d07d58da196f8d45.json  dd5ad5b30c23ab86.json  (+4 more)
plugins/validation/20260625_081154/: report.json
src/madrac_dubbing/: __main__.py  api.py
src/madrac_dubbing/pipeline/: dubbing_pipeline.py  (+1 more)
(+2 files in other folders)
