[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "madrac-dubbing"
version = "1.0.0-rc1"
description = "AI dubbing extension for madrac-subs subtitle editor"
authors = [{name = "MADRAC Team"}]
requires-python = ">=3.11"
dependencies = [
    "edge-tts==6.1.12",
    "librosa==0.10.0",
    "scipy==1.11.0",
    "soundfile==0.12.1",
    "pyloudnorm==0.1.0",
    "numpy>=1.24.0",
    "Flask==3.0.0",
    "click==8.1.0",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "pytest-asyncio==0.21.0",
]
build = [
    "pyinstaller>=6.2",
]
